modified database, fixed double scrollbar, added golang "spoonmaster"

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@ body {
   overflow-x: hidden
 }
 
+body {
+  overflow-y: hidden;
+}
+
 .flippedSpoon {
   transform: rotateY(180deg)
 }
